--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,23 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JetpackComposeExample"
         tools:targetApi="31">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAEakMM8Gw0ailnKcufNUdS9mjADQyso40"/>
+
+        <activity
+            android:name=".Columns"
+            android:exported="false"
+            android:label="@string/title_activity_map"
+            android:theme="@style/Theme.JetpackComposeExample" />
         <activity
             android:name=".MainActivity"
             android:exported="false"
             android:label="@string/title_activity_columns"
             android:theme="@style/Theme.JetpackComposeExample" />
         <activity
-            android:name=".Columns"
+            android:name=".MapActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.JetpackComposeExample">
