--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JetpackComposeExample"
         tools:targetApi="31">
+        <activity
+            android:name=".MapActivity"
+            android:exported="false"
+            android:label="@string/title_activity_dialog"
+            android:theme="@style/Theme.JetpackComposeExample" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyAEakMM8Gw0ailnKcufNUdS9mjADQyso40"/>
+            android:value="AIzaSyAEakMM8Gw0ailnKcufNUdS9mjADQyso40" />
 
         <activity
             android:name=".Columns"
@@ -28,7 +33,7 @@
             android:label="@string/title_activity_columns"
             android:theme="@style/Theme.JetpackComposeExample" />
         <activity
-            android:name=".MapActivity"
+            android:name=".DialogActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.JetpackComposeExample">
